syntax = "proto3";
package chord;

option go_package = "api";

service Chord {
    rpc Ping(Void) returns(ContactInfo) {}
    rpc FindSuccessor(Id) returns(ContactInfo) {}
    rpc ClosestPrecedingNode(Id) returns(ContactInfo) {}
    rpc Predecessor(Void) returns(ContactInfo) {}
    rpc Successor(Void) returns(ContactInfo) {}
    rpc Notify(ContactInfo) returns(Void) {}
}

message Void {

}

message Id {
    string id = 1;
    string hash = 2;
}

message NodeId {
    bytes val = 1;
}

message ContactInfo {
    string address = 1;
    NodeId id = 2;
    bytes payload = 3;
}